--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     if (window.location.href === -1) {
       baseURL = "http://localhost:3000";
     } else {
-      baseURL = "https://first-e-commerce-website.herokuapp.com/ "
+      baseURL = "https://first-e-commerce-website.herokuapp.com";
     }
 
 
@@ -88,7 +88,7 @@
       let isFreeShipping = document.querySelector("#isFreeShipping").value;
       let shopName = document.querySelector("#shopName").value;
 
-      
+
       axios.post('${baseURL}/product', {
         productName,
         productPrice,
